Setting digits as modifier in keymap is broken #95078

Closed
opened 2022-01-20 11:28:33 +01:00 by Michael Soluyanov · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: 922ae55a16

Short description of error
Setting digits as modifier in keymap is broken. Even if they are existed in the list of modifiers:

image.png

You can't set any digit in the custom modifier field, it remains empty after input:

image.png

Exact steps for others to reproduce the error

  1. Open Keymap preferences
  2. Expand one of keymap Items
  3. Press in custom modifier (one of the buttons without label after Cmd)
  4. Press a key is shown. Press a key 0-9 from numbers field in numbers row (not the numpad keys)
    Result: Button remains empty, modifier doesn't apply.
    Expected result: Button should work as with other buttons, for example letters key.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.38 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-10 22:45, hash: `922ae55a16` **Short description of error** Setting digits as modifier in keymap is broken. Even if they are existed in the list of modifiers: ![image.png](https://archive.blender.org/developer/F12812494/image.png) You can't set any digit in the custom modifier field, it remains empty after input: ![image.png](https://archive.blender.org/developer/F12812497/image.png) **Exact steps for others to reproduce the error** 1) Open Keymap preferences 2) Expand one of keymap Items 3) Press in custom modifier (one of the buttons without label after Cmd) 4) Press a key is shown. Press a key 0-9 from numbers field in numbers row (not the numpad keys) Result: Button remains empty, modifier doesn't apply. Expected result: Button should work as with other buttons, for example letters key.
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

There is a check for keyboard keys (introduced in add48983ca).
This checks for > AKEY (which was right at the time of writing), but the order in the keys enum changed in 6c623b0e8c (and put ZEROKEY etc on top of AKEY)

So the check now needs to be > ZEROKEY.

There is a check for keyboard keys (introduced in add48983ca). This checks for `> AKEY` (which was right at the time of writing), but the order in the keys enum changed in 6c623b0e8c (and put `ZEROKEY` etc on top of `AKEY`) So the check now needs to be `> ZEROKEY`.

This issue was referenced by 53923f502d

This issue was referenced by 53923f502d0f92e5bb3e60e543d69cd38146e874

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-01-21 05:20:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95078
No description provided.